CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@


Changes in version 4.2:
 18: (2011-12-xx)
  GridCoordSys.getDateRange() now works for 2D time coord. get<NamedObject> deprecated.
  mavenized: combine common, unidataCommon; split bufr, bufrTables
  FMRC bug in constant offset datasets when offset didnt start at 0.
 17: (2010-11-30)
  Attribute tolerate null value
  NcMLWriter check for null attribute
  H5: Off by 1 error in DoublingTable
 16: (2010-11-24)
  Improve diagnostic on Aggregation / no datasets found
  H5/N4 non-string vlen bug.
  GridVariable ensemble coordinate - use perturbation number and enseble type
  Grib2 Template 11 bug reading forecast time
 15: (2010-11-19)
  NetcdfCFWriter : set large file if needed
  FileWriter: allow largeFiles. also use much larger buffer
  H5header: message sizes are unsigned
  bug in BDB create permission
 14: (2010-11-13)
  NetcdfFile.getDetailInfo() had a bug, showed up in BUFR
  cdmremote improvemnets
  NetcdfFile: unescape string in getRaf() (from erussell@ngs.org)
  H5header: clarify GlobalHeap termination condition
 13: (2010-11-01)
  CoordinateAxis sets caching to true, VariableDS propagates to orgVar.
  remove e.printStackTrace() at CEEvaluator line 180
  add Fmrc.close(), CollectionManager.close() to release resources
  manage bdb databases so that they can be deleted when needed to regenerate the metadata
  GribPds: getForecastTimeInterval(int wantUnit) convert to desired unit, for GFS_Global_2p5deg
  GRIB2: if end of interval = 0, use forecast time.
  GribGridRecord: getStatisticalProcessTypeName, getStatisticalProcessTypeNameShort
  ToolsUI: add IOSP/Cdmremote panel
  Grib: clarify units and udunits
  remove GridLookup.getFirstTimeRangeUnitName()
  Grib2ProductDefinitionSection needs refTime
  use CF.GRID_MAPPING_NAME where possible
 12: (2010-10-26)
  LatLonProjection uses "latitude_longitude" for grid_mapping_name attribute